# offerpilot

./: .dockerignore  .env.example  .env.production.example  .gitignore  CODEX_HANDOFF.md  Dockerfile  LICENSE  PRD.md  README.md  SECURITY.md  compose.mailpit.yaml  compose.production.yaml  compose.yaml  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: ci.yml
.openai/: hosting.json
api/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/app/: __init__.py  auth.py  catalog_data.py  data.py  mailer.py  main.py  middleware.py  models.py  observability.py  postgres_store.py  program_data.py  settings.py  store.py  taxonomy.py
api/app/services/: action_plan.py  advisor.py  agent.py  deepseek_advisor.py  model_provider.py  recommender.py  roadmap.py  transcript.py
api/evals/: __init__.py  deepseek_smoke.py  email_e2e.py  run_advisor_eval.py  run_eval.py
api/migrations/: env.py
api/migrations/versions/: 0001_beta_schema.py  0002_terms_acceptance.py
api/tests/: conftest.py  test_api.py  test_catalog.py  test_eval.py  test_mailer.py  test_model_provider.py  test_postgres_store.py  test_roadmap.py  test_settings.py  test_store.py
app/: api-client.ts  globals.css  layout.tsx  page.tsx  portfolio-controls.tsx  roadmap-view.tsx
deploy/: Caddyfile  backup.sh  preflight.sh
docs/: BETA_LAUNCH_RUNBOOK.md
tests/: rendered-html.test.mjs  vercel-config.test.mjs
