[project]
name = "offerpilot-api"
version = "0.2.0"
description = "FastAPI service for the OfferPilot recommendation agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.10,<3.0",
    "httpx>=0.28,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.15,<2.0",
    "sentry-sdk[fastapi]>=2.40,<3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
